# pythonwithai

./: README.md
CH1/: demo1.py  demo2.py  demo3.py  pyproject.toml
CH2/: demo1.py  demo10.py  demo11.py  demo12.py  demo13.py  demo14.py  demo15.py  demo16.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo7.py  demo8.py  demo9.py  pyproject.toml
CH4/: 4-3-1.py  4-3-2.py  4-3-3.py  4-4.py  4-5.py
CH5/5-3/: 5-3-1.py  5-3-2.py  5-3-3.py
CH5/5-4/: 5-4-1.py
CH5/5-5/: 5-5-1.py  5-5-2.py  batch_embeddings_results.jsonl  batch_job_results.jsonl  embed_data.jsonl  mydata.jsonl
CH5/5-6/: 5-6-1.py
CH5/5-7/: 5-7-1.py  5-7-2.py
CH6/6-1/: 6-1-1.py
CH6/6-2/: 6-2-1.py
CH6/6-3/: 6-3-1.py
CH6/6-4/: 6-4-1.py
CH6/6-5/: 6-5-1.py
CH6/6-6/: 6-6-1.py  6-6-2.py
CH6/6-7/: 6-7-1.py  6-7-2.py  mcp_agent.config.yaml  server.py
CH7/: 7-1.py  7-2.py  7-3.py  7-4.py  7-5.ipynb
CH8/: 8-1.py  8-2.json  8-3.py  8-4.py  8-5.py  8-6.py  8-7.ipynb
